syntax = "proto3";

package receiverpacket;

message ReceiverPacket {
    repeated double rxfreqs = 1;
    uint32 nrang = 2;
    uint32 frang = 3;
    uint32 sequence_num = 4;
    uint32 num_channels = 5;
    repeated BeamDirections beam_directions = 6;

    message BeamDirections {
        repeated double phase = 1;
    }
}
